added sign up 1

--- a/login/templates/login/login1.html
+++ b/login/templates/login/login1.html
@@ -105,7 +105,7 @@
 						{% endfor %}
           </form>
           <div class="d-flex justify-content-center">
-            <a href="{% url 'login:reset_password' %}">Forgot your password?</a> or <a href="{% url 'login:register' %}">Sign Up</a>
+            <a href="{% url 'login:reset_password' %}">Forgot your password?</a> <br> <a href="{% url 'login:register' %}">Sign Up</a>
           </div>
         </div>
       </div>
