--- a/login/templates/login/login1.html
+++ b/login/templates/login/login1.html
@@ -105,7 +105,9 @@
 						{% endfor %}
           </form>
           <div class="d-flex justify-content-center">
-            <a href="{% url 'login:reset_password' %}">Forgot your password?</a> <br> <a href="{% url 'login:register' %}">Sign Up</a>
+            <p>
+              <a href="{% url 'login:reset_password' %}">Forgot your password?</a>  or  <a href="{% url 'login:register' %}">Sign Up</a>
+            </p>
           </div>
         </div>
       </div>
