--- a/main/templates/main/arts_deg_college.html
+++ b/main/templates/main/arts_deg_college.html
@@ -44,7 +44,25 @@
 
   </section>
 
+  <section id="hero" class="hero" style="background-image: url('https://images.unsplash.com/photo-1531259736756-6caccf485f81?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80');">
+    <div class="container text-center">
+      <div class="row">
+        
+      </div>
 
+      <div class="col-md-12">
+        <h1>
+          SELECT YOUR NEXT HOME!
+        </h1>
+
+        <p class="tagline">
+          CHOOSE YOUR HOME FOR THE NEXT 4 YEARS WISELY!!
+        </p>
+        <a class="btn btn-full scrollto" href="#team">Choose Now</a>
+      </div>
+    </div>
+
+  </section>
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center">
 
