--- a/main/templates/main/arts_deg_course.html
+++ b/main/templates/main/arts_deg_course.html
@@ -43,6 +43,25 @@
 
 <body>
 
+  <section id="hero" class="hero" style="background-image: url('https://images.unsplash.com/photo-1515325595179-59cd5262ca53?ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8aGlzdG9yeXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60');">
+    <div class="container text-center">
+      <div class="row">
+        
+      </div>
+
+      <div class="col-md-12">
+        <h1>
+          DEGREE COURSES 
+        </h1>
+
+        <p class="tagline">
+          CHOOSE YOUR DEGREE COURSES HERE.
+        </p>
+        <a class="btn btn-full scrollto" href="#team">Choose Now</a>
+      </div>
+    </div>
+
+  </section>
  
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center">
@@ -83,26 +102,10 @@
 
 
   <main id="main">
-
-    <section class="cta">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-9 col-sm-12 text-lg-start text-center">
-            <h2>
-               COURSES
-            </h2>
-
-            <p>
-                These are some of the  courses that you may pursue.
-            </p>
-          </div>
-
-        </div>
-      </div>
-    </section> 
+ 
     <section class="team" id="team">
         <h2 class="text-center">
-          DIPLOMA COURSES 
+          DEGREE COURSES 
         </h2>
         <h3 style=" text-align:center">
           1. B.FA
