--- a/main/templates/main/com_maths_college.html
+++ b/main/templates/main/com_maths_college.html
@@ -43,6 +43,25 @@
 
 <body>
 
+  <section id="hero" class="hero" style="background-image: url('https://images.unsplash.com/photo-1524178232363-1fb2b075b655?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80');">
+    <div class="container text-center">
+      <div class="row">
+        
+      </div>
+
+      <div class="col-md-12">
+        <h1>
+          CHOOSE YOUR COLLEGE HERE.
+        </h1>
+
+        <p class="tagline">
+          NO WORRIES FOR COLLEGS NOW.
+        </p>
+        <a class="btn btn-full scrollto" href="#team">Choose Now</a>
+      </div>
+    </div>
+
+  </section>
 
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center">
