--- a/main/templates/main/eng_coaching.html
+++ b/main/templates/main/eng_coaching.html
@@ -46,7 +46,25 @@
   
 
   </section>
+  <section id="hero" class="hero" style="background-image: url('https://images.unsplash.com/photo-1581726707445-75cbe4efc586?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=755&q=80');">
+    <div class="container text-center">
+      <div class="row">
+        
+      </div>
 
+      <div class="col-md-12">
+        <h1>
+          BEST COACHING IN INDIA
+        </h1>
+
+        <p class="tagline">
+          CHECK OUT SOME OF INDIA'S TOP COACHINGS.
+        </p>
+        <a class="btn btn-full scrollto" href="#team">Choose Now</a>
+      </div>
+    </div>
+
+  </section>
   
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center">
@@ -126,7 +144,7 @@
             </h2>
 
             <p>
-                These are some of the courses you can look.
+                Choose from one of the best below.
             </p>
           </div>
 
