--- a/main/templates/main/gen_degree.html
+++ b/main/templates/main/gen_degree.html
@@ -42,7 +42,25 @@
 
   </section>
 
-  
+  <section id="hero" class="hero" style="background-image: url('https://images.unsplash.com/photo-1523580846011-d3a5bc25702b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=750&q=80');">
+    <div class="container text-center">
+      <div class="row">
+        
+      </div>
+
+      <div class="col-md-12">
+        <h1>
+          DEGREES!!!
+        </h1>
+
+        <p class="tagline">
+          CHOOSE YOUR DEGREE WISELY. 
+        </p>
+        <a class="btn btn-full scrollto" href="#team">Choose Now</a>
+      </div>
+    </div>
+    </section>
+
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center">
 
