--- a/main/templates/main/med_inst.html
+++ b/main/templates/main/med_inst.html
@@ -42,7 +42,24 @@
 
   </section>
 
-  
+  <section id="hero" class="hero" style="background-image: url('https://images.unsplash.com/photo-1519494026892-80bbd2d6fd0d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=735&q=80');">
+    <div class="container text-center">
+      <div class="row">
+        
+      </div>
+
+      <div class="col-md-12">
+        <h1>
+          DOCTORS!!!
+        </h1>
+
+        <p class="tagline">
+          CHOOSE WHERE YOU WANT TO BECOME GOD AMONGST MEN.
+        </p>
+        <a class="btn btn-full scrollto" href="#team">Choose Now</a>
+      </div>
+    </div>
+    </section>  
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center">
 
