--- a/main/templates/main/arts_dip.html
+++ b/main/templates/main/arts_dip.html
@@ -41,6 +41,26 @@
 
 <body>
 
+  <section id="hero" class="hero" style="background-image: url('https://images.unsplash.com/photo-1519070994522-88c6b756330e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1802&q=80');">
+    <div class="container text-center">
+      <div class="row">
+        
+      </div>
+
+      <div class="col-md-12">
+        <h1>
+          DIPLOMA!!!
+        </h1>
+
+        <p class="tagline">
+          THE BEST WAY FOR YOU TO BECOME ELITE!!
+        </p>
+        <a class="btn btn-full scrollto" href="#team">Choose Now</a>
+      </div>
+    </div>
+
+  </section>
+
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center">
 
