--- a/main/templates/main/com_wmaths_college.html
+++ b/main/templates/main/com_wmaths_college.html
@@ -47,7 +47,25 @@
   
 
   </section>
+  <section id="hero" class="hero" style="background-image: url('https://images.unsplash.com/photo-1561089489-f13d5e730d72?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=667&q=80');">
+    <div class="container text-center">
+      <div class="row">
+        
+      </div>
 
+      <div class="col-md-12">
+        <h1>
+          CHOOSE YOUR COLLEGE HERE.
+        </h1>
+
+        <p class="tagline">
+          NO WORRIES FOR COLLEGS NOW.
+        </p>
+        <a class="btn btn-full scrollto" href="#team">Choose Now</a>
+      </div>
+    </div>
+
+  </section>
   
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center">
