--- a/main/templates/main/com_wmaths_course.html
+++ b/main/templates/main/com_wmaths_course.html
@@ -46,15 +46,31 @@
 
   </section>
 
-  
+  <section id="hero" class="hero" style="background-image: url('https://images.unsplash.com/photo-1509228468518-180dd4864904?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80');">
+    <div class="container text-center">
+      <div class="row">
+        
+      </div>
+
+      <div class="col-md-12">
+        <h1>
+          WITHOUT MATHS. YES!!!
+        </h1>
+
+        <p class="tagline">
+          STUDY WITHOUT MATHS.
+        </p>
+        <a class="btn btn-full scrollto" href="#team">Choose Now</a>
+      </div>
+    </div>
+
+  </section>
+
+
+
+
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center">
-
-      
-        
-        
-      
-
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a class="nav-link scrollto active" href="#">Hello {{ user.username }} !!</a></li>
@@ -142,7 +158,7 @@
     <section class="team" id="team">
       
         <h2 class="text-center">
-          DIPLOMA COURSES 
+          AVAILABLE COURSES 
         </h2>
         <h3 style=" text-align:center">
           1. B.COM
