--- a/main/templates/main/gen_inst.html
+++ b/main/templates/main/gen_inst.html
@@ -43,42 +43,68 @@
 
   </section>
 
-  
-  <nav id="navbar" class="navbar order-last order-lg-0">
-    <ul>
-      <li><a class="nav-link scrollto active" href="#">Hello {{ user.username }} !!</a></li>
-      <li><a class="nav-link scrollto" href="{% url 'main:chooseclass' %}">Home</a></li>
+  <section id="hero" class="hero" style="background-image: url('https://images.unsplash.com/photo-1488229297570-58520851e868?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=749&q=80');">
+    <div class="container text-center">
+      <div class="row">
+        
+      </div>
+
+      <div class="col-md-12">
+        <h1>
+          SCIENCE COLLEGES!!!
+        </h1>
+
+        <p class="tagline">
+          WHERE DO YOU WANT TO BE A SCIENTIST
+        </p>
+        <a class="btn btn-full scrollto" href="#team">Choose Now</a>
+      </div>
+    </div>
+    </section>
+  <header id="header" class="d-flex align-items-center">
+    <div class="container d-flex align-items-center">
+
       
-      <li class="dropdown"><a href="#"><span>Choose your class</span> <i class="bi bi-chevron-down"></i></a>
+        
+        
+      
+
+      <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
+          <li><a class="nav-link scrollto active" href="#">Hello {{ user.username }} !!</a></li>
+          <li><a class="nav-link scrollto" href="{% url 'main:chooseclass' %}">Home</a></li>
           
-          <li class="dropdown"><a href="#"><span>9th & 10th</span> <i class="bi bi-chevron-right"></i></a>
+          <li class="dropdown"><a href="#"><span>Choose your class</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="{% url 'main:scienceten' %}">SCIENCE</a></li>
-              <li><a href="{% url 'main:commerceten' %}">COMMERCE</a></li>
-              <li><a href="{% url 'main:artsten' %}">ARTS</a></li>
-              <li><a href="{% url 'main:diplomaten' %}">DIPLOMA</a></li>
+              
+              <li class="dropdown"><a href="#"><span>9th & 10th</span> <i class="bi bi-chevron-right"></i></a>
+                <ul>
+                  <li><a href="{% url 'main:scienceten' %}">SCIENCE</a></li>
+                  <li><a href="{% url 'main:commerceten' %}">COMMERCE</a></li>
+                  <li><a href="{% url 'main:artsten' %}">ARTS</a></li>
+                  <li><a href="{% url 'main:diplomaten' %}">DIPLOMA</a></li>
+                  
+                </ul>
+              </li>
+              <li class="dropdown"><a href="#"><span>11th & 12th</span> <i class="bi bi-chevron-right"></i></a>
+                <ul>
+                  <li><a href="{% url 'main:science' %}">SCIENCE</a></li>
+                  <li><a href="{% url 'main:commerce' %}">COMMERCE</a></li>
+                  <li><a href="{% url 'main:arts' %}">ARTS</a></li>
+                  <li><a href="{% url 'main:studyabroad' %}">STUDY ABROAD</a></li>
+                </ul>
+              </li>
               
             </ul>
           </li>
-          <li class="dropdown"><a href="#"><span>11th & 12th</span> <i class="bi bi-chevron-right"></i></a>
-            <ul>
-              <li><a href="{% url 'main:science' %}">SCIENCE</a></li>
-              <li><a href="{% url 'main:commerce' %}">COMMERCE</a></li>
-              <li><a href="{% url 'main:arts' %}">ARTS</a></li>
-              <li><a href="{% url 'main:studyabroad' %}">STUDY ABROAD</a></li>
-            </ul>
-          </li>
-          
+          <li><a class="nav-link scrollto" href="{% url 'main:contact' %}">About us</a></li>
+          <li><a class="nav-link scrollto" href="{% url 'login:logout' %}">Log Out</a></li>
         </ul>
-      </li>
-      <li><a class="nav-link scrollto" href="{% url 'main:contact' %}">About us</a></li>
-      <li><a class="nav-link scrollto" href="{% url 'login:logout' %}">Log Out</a></li>
-    </ul>
-    <i class="bi bi-list mobile-nav-toggle"></i>
-  </nav>
-</div>
-</header>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav>
+    </div>
+  </header>
+
 
 
   <main id="main">
