BUG FIXED MAJOR

--- a/main/templates/main/10diploma.html
+++ b/main/templates/main/10diploma.html
@@ -54,7 +54,7 @@
         <p class="tagline">
           Pave your own path to success. Choose from one of our recommended courses.
         </p>
-        <a class="btn btn-full scrollto" href="#team">Start Noe</a>
+        <a class="btn btn-full scrollto" href="#team">Start Now</a>
       </div>
     </div>
 
