--- a/main/templates/main/com_maths_college.html
+++ b/main/templates/main/com_maths_college.html
@@ -55,7 +55,7 @@
         </h1>
 
         <p class="tagline">
-          NO WORRIES FOR COLLEGS NOW.
+          NO WORRIES FOR COLLEGES NOW.
         </p>
         <a class="btn btn-full scrollto" href="#team">Choose Now</a>
       </div>
