--- a/main/templates/main/com_maths_course.html
+++ b/main/templates/main/com_maths_course.html
@@ -55,7 +55,7 @@
         <p class="tagline">
           COMMERCE WITHOUT MATHS IS UNFINISHED
         </p>
-        <a class="btn btn-full scrollto" href="#about">Explore Now</a>
+        <a class="btn btn-full scrollto" href="#team">Explore Now</a>
       </div>
     </div>
 
